--- a/portfolio.html
+++ b/portfolio.html
@@ -241,6 +241,7 @@
               </ul>
           </address>
             </div>
+            
             <div class="footer-container-social">
               <h2 class="footer-social-title">ПРИЄДНУЙТЕСЬ</h2>
               <ul class="footer-social-list">
@@ -248,28 +249,45 @@
                   <a href="" class="footer-social-link">
                 <svg class="footer-icon-social" width="20" height="20">
                   <use href="./img/icons.svg#icon-instagram2"></use>
-                </svg></a>
+                </svg>
+              </a>
                 </li>
                 <li class="footer-social-item">
                   <a href="" class="footer-social-link">
                   <svg class="footer-icon-social" width="20" height="20">
                     <use href="./img/icons.svg#icon-twitter2"></use>
-                  </svg></a>
+                  </svg>
+                </a>
                   </li>
                   <li class="footer-social-item">
                     <a href="" class="footer-social-link">
                     <svg class="footer-icon-social" width="20" height="20">
                       <use href="./img/icons.svg#icon-facebook2"></use>
-                    </svg></a>
+                    </svg>
+                  </a>
                     </li>
                     <li class="footer-social-item">
                       <a href="" class="footer-social-link">
                       <svg class="footer-icon-social" width="20" height="20">
                         <use href="./img/icons.svg#icon-linkedin2"></use>
-                      </svg></a>
+                      </svg>
+                    </a>
                       </li>
               </ul>
             </div>
+
+            <div class="container-footer-form">
+              <p class="footer-form-call">Підпишіться на розсилку</p>
+              <form class="footer-form">
+                <input class="footer-form-input" type="email" placeholder="E-mail" required />
+                <button type="submit" class="footer-form-btn">
+                  Підписатися
+                  <svg class="footer-form-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-icon-send"></use>
+                  </svg>
+                </button>
+              </form>
+             </div>
             </div>
           </footer>
           </body>
